--- a/source/photo.html
+++ b/source/photo.html
@@ -10,6 +10,7 @@
 <body>
     <header class="page-header">
         <nav class="main-navigation main-navigation--opened">
+          <div class="main-navigation__wrapper">
 
             <div class="main-navigation__top">
 
@@ -67,7 +68,7 @@
                 <button class="main-navigation__button--close main-navigation__button" type="button" aria-label="Закрыть меню"></button>
                 <button class="main-navigation__button--open main-navigation__button" type="button" aria-label="Открыть меню"></button>
 
-           </div>
+            </div>
 
             <ul class="main-navigation__list site-list">
                 <li class="site-list__item">
@@ -83,6 +84,7 @@
                     <a class="site-list__link" href="#">HTML Academy</a>
                 </li>
             </ul>
+          </div>
         </nav>
     </header>
     <main class="page-main page-main--photo">
@@ -318,69 +320,72 @@
         <!-- Фото, загруженное пользователем -->
 
         <section class="user-photo">
-          <h2 class="visually-hidden">Загрузите Вашу фотографию</h2>
-          <p class="user-photo__text"><span>Затмите их всех!</span>Выкладывайте все, что накопилось в телефоне!</p>
-          <form class="user-photo__form" action="https://echo.htmlacademy.ru" method="get">
-              <p class="user-photo__image-container">
-                <picture>
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-7-desktop.webp">
-                  <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-7-tablet.webp">
-                  <source type="image/webp" srcset="img/photo-7-mobile.webp">
+          <div class="user-photo__wrapper">
+            <h2 class="visually-hidden">Загрузите Вашу фотографию</h2>
+            <p class="user-photo__text"><span>Затмите их всех!</span>Выкладывайте все, что накопилось в телефоне!</p>
+            <form class="user-photo__form" action="https://echo.htmlacademy.ru" method="get">
+                <p class="user-photo__image-container">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-7-desktop.webp">
+                    <source type="image/webp" media="(min-width: 660px)" srcset="img/photo-7-tablet.webp">
+                    <source type="image/webp" srcset="img/photo-7-mobile.webp">
 
-                  <source media="(min-width: 1200px)" srcset="img/photo-7-desktop.jpg">
-                  <source media="(min-width: 660px)" srcset="img/photo-7-tablet.jpg">
-                  <img class="user-photo__image" src="img/photo-7-mobile.jpg" width="280" height="374" alt="Ваше фото">
-                </picture>
-              </p>
-              <div class="user-photo__settings">
-                <ul class="user-photo__toggles-list">
-                  <li class="user-photo__toggles-item">
-                    <button class="user-photo__toggle user-photo__toggle--crop user-photo__toggle--active" for="radio-crop" aria-label="Вырезать">
-                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-                          <path fill="#b5b9be" d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z"></path>
-                      </svg>
-                    </button>
-                  </li>
-                  <li class="user-photo__toggles-item">
-                    <button class="user-photo__toggle user-photo__toggle--saturate" for="radio-saturate" aria-label="Насыщенность">
-                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-                          <path fill="#b5b9be" d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34  s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7  c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z"></path>
-                          <rect fill="#b5b9be" y="40" width="48" height="3"></rect>
-                      </svg>
-                    </button>
-                  </li>
-                  <li class="user-photo__toggles-item">
-                    <button class="user-photo__toggle user-photo__toggle--contrast" for="radio-contrast" aria-label="Контраст">
-                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" width="31.92px" height="31.92px" viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92" xml:space="preserve">
-                          <path fill="#b5b9be" d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8  S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8  C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z"></path>
-                          <path fill="#b5b9be" d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519"></path>
-                      </svg>
-                    </button>
-                  </li>
-                </ul>
-                <p class="user-photo__filters">
-                  <label class="user-photo__filter user-photo__filter--crop">
-                    <input class="user-photo__filter-range user-photo__filter-range--crop" type="range" name="crop">
-                  </label>
-                  <label class="user-photo__filter user-photo__filter--saturate">
-                    <input class="user-photo__filter-range user-photo__filter-range--saturate" type="range" name="saturate">
-                  </label>
-                  <label class="user-photo__filter user-photo__filter--contrast">
-                    <input class="user-photo__filter-range user-photo__filter-range--contrast" type="range" name="contrast">
-                  </label>
+                    <source media="(min-width: 1200px)" srcset="img/photo-7-desktop.jpg">
+                    <source media="(min-width: 660px)" srcset="img/photo-7-tablet.jpg">
+                    <img class="user-photo__image" src="img/photo-7-mobile.jpg" width="280" height="374" alt="Ваше фото">
+                  </picture>
                 </p>
-              </div>
-              <div class="user-photo__button-container">
-                <button class="user-photo__button user-photo__button-post button" type="submit">Запостить</button>
-                <button class="user-photo__button user-photo__button-cancel button button--disabled" type="button">Отмена</button>
-              </div>
-            </form>
+                <div class="user-photo__settings">
+                  <ul class="user-photo__toggles-list">
+                    <li class="user-photo__toggles-item">
+                      <button class="user-photo__toggle user-photo__toggle--crop user-photo__toggle--active" for="radio-crop" aria-label="Вырезать">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                            <path fill="#b5b9be" d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z"></path>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="user-photo__toggles-item">
+                      <button class="user-photo__toggle user-photo__toggle--saturate" for="radio-saturate" aria-label="Насыщенность">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                            <path fill="#b5b9be" d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34  s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7  c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z"></path>
+                            <rect fill="#b5b9be" y="40" width="48" height="3"></rect>
+                        </svg>
+                      </button>
+                    </li>
+                    <li class="user-photo__toggles-item">
+                      <button class="user-photo__toggle user-photo__toggle--contrast" for="radio-contrast" aria-label="Контраст">
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" x="0px" y="0px" width="31.92px" height="31.92px" viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92" xml:space="preserve">
+                            <path fill="#b5b9be" d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8  S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8  C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z"></path>
+                            <path fill="#b5b9be" d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519"></path>
+                        </svg>
+                      </button>
+                    </li>
+                  </ul>
+                  <p class="user-photo__filters">
+                    <label class="user-photo__filter user-photo__filter--crop">
+                      <input class="user-photo__filter-range user-photo__filter-range--crop" type="range" name="crop">
+                    </label>
+                    <label class="user-photo__filter user-photo__filter--saturate">
+                      <input class="user-photo__filter-range user-photo__filter-range--saturate" type="range" name="saturate">
+                    </label>
+                    <label class="user-photo__filter user-photo__filter--contrast">
+                      <input class="user-photo__filter-range user-photo__filter-range--contrast" type="range" name="contrast">
+                    </label>
+                  </p>
+                </div>
+                <div class="user-photo__button-container">
+                  <button class="user-photo__button user-photo__button-post button" type="submit">Запостить</button>
+                  <button class="user-photo__button user-photo__button-cancel button button--disabled" type="button">Отмена</button>
+                </div>
+              </form>
+            </div>
         </section>
       </main>
 
     <!-- Футер -->
 
     <footer class="page-footer page-footer">
+      <div class="page-footer__wrapper">
         <a href="index.html" class="page-footer__logo-link">
             <svg class="page-footer__logo page-footer__logo--mobile" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" enable-background="new 0 0 146.3 40.375" xml:space="preserve">
               <g>
@@ -446,6 +451,7 @@
                 </svg>
             </a>
         </div>
+      </div>
     </footer>
     <script src="js/main-nav.js"></script>
 </body>
