--- a/src/photo.html
+++ b/src/photo.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">   
-    <title>Мобильное приложение Pink</title>
+    <link href="css/style.min.css" rel="stylesheet"> 
+    
+    <link rel="preload" href="fonts/OpenSans-Regular.woff2" as="font">
+    <link rel="preload" href="fonts/OpenSans-Bold.woff2" as="font">
+
+    <title>Галлерея пользователей</title>
 </head>
 <body>
     <header class="page-header">
